--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         [Paper]
         [Code]
         </br>
-        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Yunxin Liu, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Kangfu Mei, and Tingting Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Yunxin Liu, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Kangfu Mei, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
     </li>
@@ -291,7 +291,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         <a href="paper/Access_2020.pdf", target="_blank">[Paper]</a>
         [Code] 【SCI-2, IF=3.745】
         </br>
-        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jianyi Wan, Mingwen Wang </p>
+        <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jianyi Wan, and Mingwen Wang </p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Access, 2020</i></br>
     </li>
@@ -300,7 +300,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         <a href="paper/ICCVW_AIM_2019.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/HERN-PyTorch", target="_blank">[Code]</a>
         </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u><b>Juncheng Li</b></u>, Jiajie Zhang, Haoyu Wu, Jie Li, Rui Huang </p>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, <u><b>Juncheng Li</b></u>, Jiajie Zhang, Haoyu Wu, Jie Li, and Rui Huang </p>
         <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen), East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">In Proceedings of International Conference on Computer Vision Workshop (<font color="red"><b>ICCV Workshop, AIM2019 Winner</b></font>), 2019.</i></br>
         <i style="font-size: 0.6rem; padding-left: 1rem">AIM: Advances in Image Manipulation workshop</i>
@@ -311,7 +311,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
         【SCI-3, IF=2.004】
         </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang,<u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye and Mingwen Wang</p>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang,<u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IET Image Processing, 2018</i>
     </li>
