--- a/index.html
+++ b/index.html
@@ -362,19 +362,19 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
     <h1 style="font-size: 1rem; font-weight: bold;">Reviewer:</h1>
     <h1 style="font-size: 0.8rem; font-weight: bold;">Journal</h1>
     <li>
-        IEEE Transactions on Image Processing (TIP)
+        IEEE Transactions on Image Processing (IEEE TIP)
     </li>
     <li>
-        IEEE Transactions on Multimedia (TMM)
+        IEEE Transactions on Multimedia (IEEE TMM)
     </li>
     <li>
-        IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)
+        IEEE Transactions on Emerging Topics in Computational Intelligence (IEEE TETCI)
     </li>
     <li>
         IEEE Access
     </li>
     <li>
-        IEEE Signal Processing Letters (SPL)
+        IEEE Signal Processing Letters (IEEE SPL)
     </li>
     <li>
         Signal Processing: Image Communication (SPIC)
@@ -396,6 +396,9 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
     </li>
     </br>
     <h1 style="font-size: 0.8rem; font-weight: bold;">Conference</h1>
+    <li>
+        International Conference on Pattern Recognition (ICPR) 2020
+    </li>
     <li>
         British Machine Vision Conference (BMVC) 2020
     </li>
