--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         _____________2020_____________
     </li>
     <li>
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=76", target="_blank"> IEEE TCSVT 2020</b></a>.
+    </li>
+    <li>
         We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=6046", target="_blank"> IEEE TMM 2020</b></a>.
     </li>
     <li>
@@ -150,8 +153,8 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <p></p>
 
 
-<p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 10 (papers) + 2 (reports) &nbsp; Under review: 6</font></p>
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total citations: 208 &nbsp; Highest citations paper: 109</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 6 (Journal) + 3 (Conference) + 2 (Workshop) + 2 (report) &nbsp; Under review: 3 (Journal) + 2 (Conference)</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 208 &nbsp; Highest citations paper: 109</font></p> 
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
@@ -186,7 +189,6 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Circuits and Systems for Video Technology (<font color="red"><b>TCSVT</b></font>), 2020.</i> </br>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Under review. arXiv preprint, arXiv:2008.13084.</i> </br>
     </li>
 
     <li>
