--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 6 (Journal) + 3 (Conference) + 2 (Workshop) + 2 (Report)</font></p>
 <p style="margin: 0; padding-left: 1rem"><font color="red">Under review: 3 (Journal) + 2 (Conference)</font></p>
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 205 &nbsp; Highest citation paper: 108</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 209 &nbsp; Highest citation paper: 109</font></p> 
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
@@ -183,7 +183,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 
     <li>
         <b>【6】 MDCN: Multi-scale Dense Cross Network for Image Super-Resolution </b> </br>
-        <a href="paper/MDCN.pdf", target="_blank">[Paper]</a>
+        <a href="paper/TCSVT_2020.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[Code]</a>
         【SCI-2, IF=4.133】
         </br>
