--- a/index.html
+++ b/index.html
@@ -263,6 +263,15 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Works</h1>
     <li>
+        <b>【9】Multi-scale Grid Network for Image Deblurring with High-frequency Guidance </b> </br>
+        [Paper]
+        [Code]
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Yang Liu, Faming Fang, <u><b>Juncheng Li</b></u>, Tingting Wang, Yun Sheng, Guixu Zhang</p>
+        <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
+    </li>
+    <li>
         <b>【8】Scale-Aware Network with Regional and Semantic Attention for Crowd Counting under Cluttered Background </b> </br>
         [Paper]
         [Code]
