--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
-    <h1 style="font-size: 1rem; font-weight: bold;">My Representative Publications</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">My Representative Works</h1>
     <li>
         <b>【8】 Single Image Dehazing via Multi-scale Topological Network </b> </br>
         [Paper]
