--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ author_profile: true
 <h1 style="font-size: 1rem; font-weight: bold;">Juncheng Li (李俊诚)</h1>
 
 <p style="font-size: 0.8rem;">
-School of Computer Science & Technology</br> 
+School of Computer Science and Technology</br> 
 East China Normal University
 </p>
 
