--- a/index.html
+++ b/index.html
@@ -113,10 +113,13 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
     <li>
-        Academic Visitor, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong</a>, 2019.8.16--2019.09.30, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor)</a> 
+        Research Assistan, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong</a>, 2020.01.04--2020.03.04, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor). Coming soon!!!</a> 
     </li>
     <li>
-        Research Assistant, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong</a>, 2018.05.10--2018.09.10, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor)</a> 
+        Academic Visitor, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong</a>, 2019.8.16--2019.09.30, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor).</a> 
+    </li>
+    <li>
+        Research Assistant, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong</a>, 2018.05.10--2018.09.10, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor).</a> 
     </li>
 </section>
 
@@ -125,7 +128,13 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Awards</h1>
     <li>
-        ICCV Travel Award, 2019.
+        I won the Wisdom Scholarship of East China Normal University in 2020. 
+    </li>
+    <li>
+        I won the Doctoral Research and Innovation Funding of East China Normal University in 2020.
+    </li>
+    <li>
+        I won the ICCV Travel Award in 2019.
     </li>
     <li>
         We won the 1 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM 2019)"</a>.
@@ -155,7 +164,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 6 (Journal) + 3 (Conference) + 2 (Workshop) + 2 (Report)</font></p>
 <p style="margin: 0; padding-left: 1rem"><font color="red">Under review: 4 (Journal) + 2 (Conference)</font></p>
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 211 &nbsp; Highest citation paper: 111</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 218 &nbsp; Highest citation paper: 117</font></p> 
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
