--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         We won the 2 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM 2019)"</a>.
     </li>
     <li>
-        We won the 4 place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge"</a> (4/1514).
+        We won the 4 place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge 2019"</a> (4/1514).
     </li>
     <li>
         Top 30 Most Potential Developers prize in the 《2018 Computer Vision Most Potential Developers List》.
