--- a/index.html
+++ b/index.html
@@ -128,13 +128,13 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Awards</h1>
     <li>
-        I won the Wisdom Scholarship of East China Normal University in 2020. 
+        I won the Wisdom Scholarship of East China Normal University, 2020. 
     </li>
     <li>
-        I won the Doctoral Research and Innovation Funding of East China Normal University in 2020.
+        I won the Doctoral Research and Innovation Funding of East China Normal University, 2020.
     </li>
     <li>
-        I won the ICCV Travel Award in 2019.
+        I won the ICCV Travel Award, 2019.
     </li>
     <li>
         We won the 1 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM 2019)"</a>.
