--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ East China Normal University
 </p>
 
 <p style="font-size: 0.8rem;">
-My google scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
-My researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
+My Google Scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
+My Researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
 Long-term co-authors: <a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</b></a>, <a href="https://scholar.google.com.hk/citations?user=ZO3KGykAAAAJ&hl=zh-CN", target="_blank">Aiwen Jiang</b></a>, <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank">Qiaosi Yi</b></a>.
 </p>
 
@@ -146,7 +146,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         We won the 4 place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge 2019"</a> (4/1514).
     </li>
     <li>
-        Top 30 Most Potential Developers prize in the 《2018 Computer Vision Most Potential Developers List》.
+        I won the Top 30 Most Potential Developers prize in 《2018 Computer Vision Most Potential Developers List》.
     </li>
     <li>
         We won the 3 place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
