--- a/index.html
+++ b/index.html
@@ -128,34 +128,34 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Awards</h1>
     <li>
-        I won the Wisdom Scholarship of East China Normal University, 2020. 
+        Wisdom Scholarship of East China Normal University, 2020. 
     </li>
     <li>
-        I won the Doctoral Research and Innovation Funding of East China Normal University, 2020.
+        Doctoral Research and Innovation Funding of East China Normal University, 2020.
     </li>
     <li>
-        I won the ICCV Travel Award, 2019.
+        ICCV Travel Award, 2019.
     </li>
     <li>
-        We won the 1 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM 2019)"</a>.
+        First place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 2: Perceptual. (ICCV-AIM 2019)"</a>.
     </li>
     <li>
-        We won the 2 place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM 2019)"</a>.
+        Second place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM 2019)"</a>.
     </li>
     <li>
-        We won the 4 place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge 2019"</a> (4/1514).
+        Fourth place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge 2019"</a> (4/1514).
     </li>
     <li>
-        I won the Top 30 Most Potential Developers prize in 《2018 Computer Vision Most Potential Developers List》.
+        Top 30 Most Potential Developers prize in 《2018 Computer Vision Most Potential Developers List》.
     </li>
     <li>
-        We won the 3 place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
+        Third place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
     </li>
     <li>
-        We won the 6 place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
+        Sixth place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
     </li>
     <li>
-        We won the 24 place in "JData algorithm competition" (Construction of the prediction model for the purchase intention of high potential users, 24/4240).
+        24 place in "JData algorithm competition" (Construction of the prediction model for the purchase intention of high potential users, 24/4240).
     </li>
 </section>
 
@@ -380,22 +380,22 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <p></p>
 
 <section style="font-size: 0.6rem;">
-    <h1 style="font-size: 1rem; font-weight: bold;">Reviewer:</h1>
-    <h1 style="font-size: 0.8rem; font-weight: bold;">Journal</h1>
+    <h1 style="font-size: 1rem; font-weight: bold;">Academic Service</h1>
+    <h1 style="font-size: 0.8rem; font-weight: bold;">Journal Reviewer</h1>
     <li>
-        IEEE Transactions on Image Processing (IEEE TIP)
+        IEEE Transactions on Image Processing (TIP)
     </li>
     <li>
-        IEEE Transactions on Multimedia (IEEE TMM)
+        IEEE Transactions on Multimedia (TMM)
     </li>
     <li>
-        IEEE Transactions on Emerging Topics in Computational Intelligence (IEEE TETCI)
+        IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)
     </li>
     <li>
         IEEE Access
     </li>
     <li>
-        IEEE Signal Processing Letters (IEEE SPL)
+        IEEE Signal Processing Letters (SPL)
     </li>
     <li>
         Signal Processing: Image Communication (SPIC)
@@ -416,12 +416,12 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         ACM Transactions on Asian and Low-Resource Language Information Processing
     </li>
     </br>
-    <h1 style="font-size: 0.8rem; font-weight: bold;">Conference</h1>
+    <h1 style="font-size: 0.8rem; font-weight: bold;">Conference Reviewer</h1>
     <li>
-        International Conference on Pattern Recognition (ICPR) 2020
+        International Conference on Pattern Recognition (ICPR)
     </li>
     <li>
-        British Machine Vision Conference (BMVC) 2020
+        British Machine Vision Conference (BMVC)
     </li>
 </section>
 
