--- a/index.html
+++ b/index.html
@@ -113,13 +113,19 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Research Experiences</h1>
     <li>
-        Research Assistan, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong</a>, 2020.01.04--2020.03.04, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor). Coming soon!!!</a> 
+        Center for Mathematical Artificial Intelligence (CMAI), The Chinese University of HongKong </br>
+        Research Assistant, 2020.01.04--2020.03.04   </br> 
+        Supervisor: Prof. ZENG Tieyong   Coming soon!!!
     </li>
     <li>
-        Academic Visitor, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank"> The Chinese University of HongKong</a>, 2019.8.16--2019.09.30, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor).</a> 
+        Department of Mathematics, The Chinese University of HongKong </br>
+        Research Assistant, 2019.8.16--2019.09.30    </br> 
+        Supervisor: Prof. ZENG Tieyong
     </li>
     <li>
-        Research Assistant, <a href="http://www.cuhk.edu.hk/chinese/index.html", target="_blank">The Chinese University of HongKong</a>, 2018.05.10--2018.09.10, <a href="http://www.math.hkbu.edu.hk/~zeng/", target="_blank">Prof. ZENG Tieyong (supervisor).</a> 
+        Department of Mathematics, The Chinese University of HongKong </br>
+        Research Assistant, 2018.05.10--2018.09.1    </br> 
+        Supervisor: Prof. ZENG Tieyong
     </li>
 </section>
 
