--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
     </li>
     <li>
         Department of Mathematics, The Chinese University of HongKong </br>
-        Research Assistant, 2019.8.16--2019.09.30    </br> 
+        Academic Visitor, 2019.8.16--2019.09.30    </br> 
         Supervisor: Prof. ZENG Tieyong
     </li>
     <li>
