--- a/index.html
+++ b/index.html
@@ -115,13 +115,15 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
     <li>
         Center for Mathematical Artificial Intelligence (CMAI), The Chinese University of HongKong </br>
         Research Assistant, 2020.01.04--2020.03.04   </br> 
-        Supervisor: Prof. ZENG Tieyong   Coming soon!!!
+        Supervisor: Prof. ZENG Tieyong  Will coming soon!!!
     </li>
+    </br> 
     <li>
         Department of Mathematics, The Chinese University of HongKong </br>
         Academic Visitor, 2019.8.16--2019.09.30    </br> 
         Supervisor: Prof. ZENG Tieyong
     </li>
+    </br> 
     <li>
         Department of Mathematics, The Chinese University of HongKong </br>
         Research Assistant, 2018.05.10--2018.09.1    </br> 
