--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 6 (Journal) + 3 (Conference) + 2 (Workshop) + 2 (Report)</font></p>
 <p style="margin: 0; padding-left: 1rem"><font color="red">Under review: 4 (Journal) + 2 (Conference)</font></p>
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 221 &nbsp; Highest citation paper: 120</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 227 &nbsp; Highest citation paper: 123</font></p> 
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
@@ -216,7 +216,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         【SCI-1, IF=6.051】
         </br>
         <p style="margin: 0; padding-left: 1rem">Jiaqian Li#, <u><b>Juncheng Li#</b></u>, Faming Fang, Fang Li, and Guixu Zhang</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red"># Joint first authors.</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">My idea and implemented by junior student, # Joint first authors.</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
     </li>
