--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ East China Normal University
 My Google Scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 My Researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
 Long-term co-authors: <a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</b></a>, <a href="https://scholar.google.com.hk/citations?user=ZO3KGykAAAAJ&hl=zh-CN", target="_blank">Aiwen Jiang</b></a>, <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank">Qiaosi Yi</b></a>.
+</p></br>
+The students I supervised: Kangfu MEI, Qiaosi Yi, Jiaqian Li, Yang Liu, Qinyan Dai</a>.
 </p>
 
 <p style="font-size: 0.8rem;">
@@ -280,7 +282,16 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 <section style="font-size: 0.7rem;" class="publications">
     <h1 style="font-size: 1rem; font-weight: bold;">Cooperative Works</h1>
     <li>
-        <b>【9】Multi-scale Grid Network for Image Deblurring with High-frequency Guidance </b> </br>
+        <b>【9】Disentangle Perceptual Learning through Online Contrastive Learning </b> </br>
+        <a href="paper/arxiv.pdf", target="_blank">[Paper]</a>
+        [Code]
+        </br>
+        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
+        <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
+    </li>
+    <li>
+        <b>【8】Multi-scale Grid Network for Image Deblurring with High-frequency Guidance </b> </br>
         [Paper]
         [Code]
         </br>
@@ -289,7 +300,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
     </li>
     <li>
-        <b>【8】Scale-Aware Network with Regional and Semantic Attention for Crowd Counting under Cluttered Background </b> </br>
+        <b>【7】Scale-Aware Network with Regional and Semantic Attention for Crowd Counting under Cluttered Background </b> </br>
         [Paper]
         [Code]
         </br>
@@ -298,22 +309,13 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
     </li>
     <li>
-        <b>【7】Edge-guided Composition Network for Image Stitching </b> </br>
+        <b>【6】Edge-guided Composition Network for Image Stitching </b> </br>
         [Paper]
         [Code]
         </br>
         <p style="margin: 0; padding-left: 1rem">Qinyan Dai, Faming Fang, <u><b>Juncheng Li</b></u>, Guixu Zhang, and Aimin Zhou</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
-    </li>
-    <li>
-        <b>【6】Disentangle Perceptual Learning through Online Contrastive Learning </b> </br>
-        <a href="paper/arxiv.pdf", target="_blank">[Paper]</a>
-        [Code]
-        </br>
-        <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Yao Lu, Qiaosi Yi, Haoyu Wu, <u><b>Juncheng Li</b></u>, and Rui Huang</p>
-        <p style="margin: 0; padding-left: 1rem">The Chinese University of Hong Kong (Shenzhen),  East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Pattern Recognition, 2020. Under review, will coming soon!</i>
     </li>
     <li>
         <b>【5】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
