--- a/index.html
+++ b/index.html
@@ -13,9 +13,8 @@ East China Normal University
 <p style="font-size: 0.8rem;">
 My Google Scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
 My Researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
-Long-term co-authors: <a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</b></a>, <a href="https://scholar.google.com.hk/citations?user=ZO3KGykAAAAJ&hl=zh-CN", target="_blank">Aiwen Jiang</b></a>, <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank">Qiaosi Yi</b></a>.
-</p></br>
-The students I supervised: Kangfu MEI, Qiaosi Yi, Jiaqian Li, Yang Liu, Qinyan Dai</a>.
+Long-term co-authors: <a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</b></a>, <a href="https://scholar.google.com.hk/citations?user=ZO3KGykAAAAJ&hl=zh-CN", target="_blank">Aiwen Jiang</b></a>, <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank">Qiaosi Yi</b></a></br>
+The students I supervised: Kangfu MEI, Qiaosi Yi, Jiaqian Li, Yang Liu, Qinyan Dai</a>
 </p>
 
 <p style="font-size: 0.8rem;">
@@ -311,7 +310,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
     <li>
         <b>【6】Edge-guided Composition Network for Image Stitching </b> </br>
         [Paper]
-        [Code]
+        [Code] 【SCI-1, IF=7.196】
         </br>
         <p style="margin: 0; padding-left: 1rem">Qinyan Dai, Faming Fang, <u><b>Juncheng Li</b></u>, Guixu Zhang, and Aimin Zhou</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
