--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         </br>
         <p style="margin: 0; padding-left: 1rem">Qinyan Dai, Faming Fang, <u><b>Juncheng Li</b></u>, Guixu Zhang, and Aimin Zhou</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Pattern Recognition, 2020. Under review, will coming soon!</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Pattern Recognition (<font color="red"><b>PR, Top Journal</b></font>), 2020. Under review, will coming soon!</i>
     </li>
     <li>
         <b>【5】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
