--- a/index.html
+++ b/index.html
@@ -63,19 +63,19 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         _____________2020_____________
     </li>
     <li>
-        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=76", target="_blank"> IEEE TCSVT 2020</b></a>.
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=76", target="_blank"> IEEE TCSVT 2020 (SCI-2)</b></a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=6046", target="_blank"> IEEE TMM 2020</b></a>.
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/mostRecentIssue.jsp?punumber=6046", target="_blank"> IEEE TMM 2020 (SCI-1)</b></a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385", target="_blank"> IEEE TNNLS 2020</b></a>.
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=5962385", target="_blank"> IEEE TNNLS 2020 (SCI-1)</b></a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6287639", target="_blank"> IEEE Access 2020</b></a>.
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=6287639", target="_blank"> IEEE Access 2020 (SCI-2)</b></a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank">IEEE TIP 2020</b></a>.
+        We have 1 paper accepted to <a href="https://ieeexplore.ieee.org/xpl/RecentIssue.jsp?punumber=83", target="_blank">IEEE TIP 2020 (SCI-1)</b></a>.
     </li>
     <li>
         _____________2019_____________
