--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         We have 1 paper accepted to <a href="https://conference.cs.cityu.edu.hk/iconip/", target="_blank">ICONIP 2018</a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="https://eccv2018.org/", target="_blank">ECCV 2018</a>.
+        We have 1 paper accepted to <a href="https://eccv2018.org/", target="_blank">ECCV 2018 (Top Conference)</a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="http://cvpr2018.thecvf.com/", target="_blank">CVPR-NTIRE Workshop 2018</a>.
