--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ Please contact me if you can provide this position.
 <section style="font-size: 0.6rem;">
 <h1 style="font-size: 1rem; font-weight: bold;">Biography</h1>
 <p style="font-size: 0.8rem;">
-I'm a Ph.D. student at the School of Computer Science and Technology, East China Normal University (ECNU), working with Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. Meanwhile, I’m a member of the Shanghai Key Laboratory of Multidimensional Information Processing. I will graduate in 2021.07.</br>
+I'm a Ph.D. student at the School of Computer Science and Technology, East China Normal University (ECNU), working with Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. I will graduate in 2021.07.</br>
 </p>
 </section>
 
@@ -173,7 +173,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 6 (Journal) + 3 (Conference) + 2 (Workshop) + 2 (Report)</font></p>
 <p style="margin: 0; padding-left: 1rem"><font color="red">Under review: 4 (Journal) + 2 (Conference)</font></p>
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 227 &nbsp; Highest citation paper: 123</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 230 &nbsp; Highest citation paper: 125</font></p> 
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
@@ -314,7 +314,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         </br>
         <p style="margin: 0; padding-left: 1rem">Qinyan Dai, Faming Fang, <u><b>Juncheng Li</b></u>, Guixu Zhang, and Aimin Zhou</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
-        <i style="font-size: 0.6rem; padding-left: 1rem">Pattern Recognition (<font color="red"><b>PR, Top Journal</b></font>), 2020. Under review, will coming soon!</i>
+        <i style="font-size: 0.6rem; padding-left: 1rem">Pattern Recognition (<font color="red"><b>PR, Top Journal</b></font>), 2020. Under review, will accept soon!</i>
     </li>
     <li>
         <b>【5】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
