--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         My friend and I build a non-profit organization (<a href="https://github.com/MIVRC", target="_blank">MIVRC</a>) for open source image processing projects in 2019.
     </li>
     <li>
-        I build CLF Studio 【丛林蜂工作室】 in 2015, a student studio dedicated to creative project development.
+        I build CLF Studio <a href="https://clfstudio.github.io/Home", target="_blank">【丛林蜂工作室】</a> in 2015, a student studio dedicated to creative project development.
     </li>
 </section>
 
